--- a/package.json
+++ b/package.json
@@ -3,18 +3,50 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "start": "nx serve",
-    "build": "nx build",
+    "start": "nx serve app",
+    "build": "nx build app --prod",
     "test": "nx test"
   },
   "private": true,
-  "dependencies": {},
   "devDependencies": {
-    "@nrwl/tao": "13.8.7",
     "@nrwl/cli": "13.8.7",
+    "@nrwl/eslint-plugin-nx": "13.8.7",
+    "@nrwl/jest": "13.8.7",
+    "@nrwl/linter": "13.8.7",
+    "@nrwl/next": "^13.8.7",
+    "@nrwl/react": "13.8.7",
+    "@nrwl/tao": "13.8.7",
+    "@nrwl/web": "13.8.7",
     "@nrwl/workspace": "13.8.7",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
+    "@types/jest": "27.0.2",
     "@types/node": "16.11.7",
-    "typescript": "~4.5.2",
-    "prettier": "^2.5.1"
+    "@types/react": "17.0.30",
+    "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "~5.10.0",
+    "@typescript-eslint/parser": "~5.10.0",
+    "babel-jest": "27.2.3",
+    "eslint": "~8.7.0",
+    "eslint-config-next": "12.1.1-canary.3",
+    "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "jest": "27.2.3",
+    "prettier": "^2.5.1",
+    "react-test-renderer": "17.0.2",
+    "ts-jest": "27.0.5",
+    "typescript": "~4.5.2"
+  },
+  "dependencies": {
+    "@nrwl/next": "13.8.7",
+    "core-js": "^3.6.5",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "regenerator-runtime": "0.13.7",
+    "tslib": "^2.0.0"
   }
 }
